--- a/estilo/style.css
+++ b/estilo/style.css
@@ -3,7 +3,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
@@ -36,10 +36,10 @@ section#telefone {
 
 iframe#tela {
     position: absolute;
-    top: 80px;
-    left: 21px;
+    top: 81px;
+    left: 22px;
 
-    width: 269px;
+    width: 266px;
     height: 471px;
 }
 
