--- a/estilo/style.css
+++ b/estilo/style.css
@@ -49,7 +49,7 @@ section#redes-sociais {
 
 section#redes-sociais img {
     margin: 10px;
-    width: 50px;
+    width: 4vw;
     border-radius: 50%;
     box-shadow: 2px 2px 3px #00000069;
 }
