--- a/estilo/style.css
+++ b/estilo/style.css
@@ -10,7 +10,7 @@ html, body {
     height: 100vh;
     width: 100vw;
 }
-
+/* FUNDO PRINCIPAL */
 body {
     background: black url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
@@ -21,6 +21,7 @@ main {
     height: 100vh;
 }
 
+/* CONFIGURAÇÃO PARA CENTRALIZAR O IPHONE */
 section#telefone {
     position: absolute;
     top: 50%;
@@ -33,6 +34,7 @@ section#telefone {
     background-position: center center;
 }
 
+/* CONFIGURAÇÃO PARA IMAGEM NA TELA DO IPHONE */
 iframe#tela {
     position: absolute;
     top: 81px;
@@ -41,7 +43,7 @@ iframe#tela {
     width: 266px;
     height: 471px;
 }
-
+/* CONFIGURAÇÃO ICONES */
 section#redes-sociais {
     text-align: right;
 }
